# textualitty

./: .gitignore  README.md  pyproject.toml  textual.icns
src/textualitty/: __main__.py  app.py
