[tool.poetry]
name = "textualitty"
version = "0.1.0.post2"
description = ""
authors = ["Felix Ingram <f.ingram@gmail.com>"]
readme = "README.md"
packages = [{include = "textualitty", from = "src"}]

[project.urls]
home = "https://github.com/lllama/textualitty"
respo = "https://github.com/lllama/textualitty"

[tool.poetry.dependencies]
python = "^3.10"
pyoxidizer = "^0.23.0"
click = "^8.1.3"
rich = "^12.6.0"

[tool.poetry.group.dev.dependencies]
black = {version = "^22.10.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
