[tool.poetry]
name = "textualitty"
version = "0.2.6"
description = ""
authors = ["Felix Ingram <f.ingram@gmail.com>"]
readme = "README.md"
packages = [{include = "textualitty", from = "src"}]
include = ["textual.icns"]

[project.urls]
home = "https://github.com/lllama/textualitty"
repo = "https://github.com/lllama/textualitty"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
rich = "^12.6.0"
tomlkit = "^0.11.6"

[tool.poetry.group.dev.dependencies]
black = {version = "^22.10.0", allow-prereleases = true}

[tool.poetry.scripts]
textualitty = "textualitty.app:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
textualitty = "textualitty.app:run"

